<?xml version="1.0"?>
<package>
  <name>dccomms_ros</name>
  <version>0.0.3</version>
  <description>The dccomms_ros package</description>

  <maintainer email="centelld@uji.es">Diego Centelles</maintainer>

  <license>TODO</license>

  <author email="centelld@uji.es">Diego Centelles</author>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>dccomms_ros_msgs</build_depend>
  <build_depend>git</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>libpoco-dev</build_depend>

  <run_depend>rclcpp</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>dccomms_ros_msgs</run_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
